# lumen-adaptive-commerce

./: .gitignore  README.md  pyproject.toml
.chroma_db/: chroma.sqlite3
chroma_data/: chroma.sqlite3
common/: config.py
iteration1/: app.py  product_types.py  prompts.py  test_arize.py  ui.py  workflow.py
iteration1/eval/: eval.md  llm_eval_framework.py  sample.json
iteration2/: README.md  app.py  chat_app.py  chat_prompts.py  chat_ui.py  chat_workflow.py  conversation_types.py  product_database.py  user_preferences.py
iteration3/: ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_FLOWS.md  WORKFLOW_FIX.md  __init__.py  agentic_prompts.py  agentic_types.py  agentic_ui.py  agentic_workflow.py  app.py  email_service.py  order_management.py  payment_processor.py  product_database.py  test_vector_search.py  test_workflow.py  tools.py  user_management.py  vector_search.py
