[tool.poetry]
name = "lumen-adaptive-commerce"
version = "0.1.0"
description = "AI-powered adaptive commerce platform with personalization engine, conversational agents, and multi-agent shopping orchestration."
authors = ["Kunal Tiwary"]
packages = [
    {include = "common"},
    {include = "iteration1"},
    {include = "iteration2"},
]

[tool.poetry.scripts]
iteration2 = "iteration2.app:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain = "*"
langgraph = "*"
langchain-openai = "*"
python-dotenv = "^1.0.0"
gradio = "*"
arize = "*"
openinference-instrumentation-langchain = "*"
arize-phoenix-otel = "*"
arize-otel = "*"
chromadb = "^0.4.0"
langchain-chroma = "*"
numpy = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"